src/objects/SBQQ__ConfigurationRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__ConfigurationRuleHelp</customHelpPage>
    <description>Links product-scoped Product Rules to specific bundle to validate correct configuration.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for instance to instance migrations as well and imports from external systems.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule should be used in validating configurations.</description>
        <inlineHelpText>Indicates whether this rule should be used in validating configurations.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AscendingNestedLevel__c</fullName>
        <description>Include parent bundle configuration with the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</description>
        <inlineHelpText>Include parent bundle configuration with the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</inlineHelpText>
        <label>Parent Bundle Condition Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DescendingActionNesting__c</fullName>
        <description>Allow child bundle configurations up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator for selection rules only.</description>
        <inlineHelpText>Allow child bundle configurations up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator for selection rules only.</inlineHelpText>
        <label>Child Bundle Action Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DescendingNestedLevel__c</fullName>
        <description>Include child bundle configurations to the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</description>
        <inlineHelpText>Include child bundle configurations to the specified level when evaluating this rule&apos;s conditions in the configurator for alert, validation and selection rules.</inlineHelpText>
        <label>Child Bundle Condition Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product feature validated by this rule.</description>
        <inlineHelpText>Select the product feature you want this rule to validate.</inlineHelpText>
        <label>Product Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>Configuration_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductRule__c</fullName>
        <description>The actual rule that defines logic used to validate product configuration.</description>
        <inlineHelpText>Select the product rule that contains the logic to validate your product configurations.</inlineHelpText>
        <label>Product Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__ProductRule__c.SBQQ__Scope__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Configured product to be validated by this rule.</description>
        <inlineHelpText>Select the configured product you want this rule to validate.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleEvaluationEvent__c</fullName>
        <description>Evaluation event of referenced rule.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__EvaluationEvent__c)</formula>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Rule Evaluation Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleType__c</fullName>
        <description>Type of referenced rule. Convenience field to avoid querying related rule record.</description>
        <formula>TEXT(SBQQ__ProductRule__r.SBQQ__Type__c)</formula>
        <inlineHelpText>Type of product rule referenced by this configuration rule.</inlineHelpText>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <label>Configuration Rule</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Ensure_rule_type_nested_level</fullName>
        <active>true</active>
        <description>Ensures the related Product Rule is of type Validation, Alert or Selection when specifying either a parent or child bundle condition level.</description>
        <errorConditionFormula>(TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != null &amp;&amp; TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != &apos;Validation&apos; &amp;&amp; TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != &apos;Alert&apos; &amp;&amp; TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != &apos;Selection&apos;) &amp;&amp; (TEXT(SBQQ__AscendingNestedLevel__c) != null || TEXT(SBQQ__DescendingNestedLevel__c) != null)</errorConditionFormula>
        <errorMessage>Condition Level only supported for Validation, Alert and Selection product rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Ensure_rule_type_nested_level_actions</fullName>
        <active>true</active>
        <description>Ensures the related Product Rule is of type Selection when specifying an action level.</description>
        <errorConditionFormula>(TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != null &amp;&amp; TEXT(SBQQ__ProductRule__r.SBQQ__Type__c) != &apos;Selection&apos;) &amp;&amp; (TEXT(SBQQ__DescendingActionNesting__c) != null)</errorConditionFormula>
        <errorMessage>Action Level only supported for Selection product rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Ensure_supported_nested_level</fullName>
        <active>true</active>
        <description>Ensure the value of either the parent or child bundle level field is None or 1.</description>
        <errorConditionFormula>(TEXT(SBQQ__AscendingNestedLevel__c) != null &amp;&amp; TEXT(SBQQ__AscendingNestedLevel__c) != &apos;1&apos;) || (TEXT(SBQQ__DescendingNestedLevel__c) != null &amp;&amp; TEXT(SBQQ__DescendingNestedLevel__c) != &apos;1&apos;) || (TEXT(SBQQ__DescendingActionNesting__c) != null &amp;&amp; TEXT(SBQQ__DescendingActionNesting__c) != &apos;1&apos;)</errorConditionFormula>
        <errorMessage>The maximum supported Bundle Level is 1.</errorMessage>
    </validationRules>
</CustomObject>